# ESP32-opencv-detect

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/esp32-camera/driver/: twi.c
main/: CMakeLists.txt  app_camera.c  index.html  main.cpp  main.cpp.bak
main/include/: app_camera.h  board_def.h
